--- a/BolindersBil.Web/Views/Vehicle/Admin.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Admin.cshtml
@@ -9,7 +9,7 @@
 
     <div class="container">
         <div class="float-sm-right" style="margin-bottom:10px">
-            <a asp-controller="Account" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
+            <a asp-controller="Vehicle" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
             <button type="button" class="btn btn-warning" name="updateVehicle" id="updateVehicle">Update</button>
             <button type="button" class="btn btn-danger" name="deleteVehicle" id="deleteVehicle" data-toggle="modal" data-target="#deleteModal">Delete</button>
         </div>
