--- a/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/EditVehicle.cshtml
@@ -157,7 +157,7 @@
     <div class="form-group">
         <div class="col-sm-10">
             <button class="btn btn-primary" type="submit">Save</button>
-            <a asp-controller="Account" asp-action="Admin" class="btn btn-secondary">Cancel</a>
+            <a asp-controller="Vehicle" asp-action="Admin" class="btn btn-secondary">Cancel</a>
         </div>
     </div>
 
