--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -27,19 +27,20 @@
 
         @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
         <form asp-controller="Vehicle" asp-action="Search" method="post">
-            <input name="searchString" class="col-md-3" placeholder="T.ex. Volvo (C30)" />            
+            <input name="searchString" class="col-md-3" placeholder="T.ex. Volvo (C30)" />
             <button type="submit">Sök</button>
             <div class="input-group-prepend">
                 <div class="input-group-text">
-                    <input type="radio" name="Used">New Car<br>
+                    <input type="radio" name="Used" value="false">New Car<br>
                 </div>
                 <div class="input-group-text">
-                    <input type="radio" name="Used">Used Car<br>
+                    <input type="radio" name="Used" value="true">Used Car<br>
                 </div>
-            </div>           
+            </div>
         </form>
 
 
+        
 
 
 
@@ -49,25 +50,25 @@
 
             @*Search form*@
             @*<form asp-action="GetVehicles" method="get">
-                    <div id="SearchBar">
-                        <div class="input-group mb-3" style="margin: 2em">
-                            <div class="input-group-prepend">
-                                <input type="text" class="form-control" placeholder="T.ex. Volvo (C30)">
-                            </div>
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <input type="checkbox" aria-label="Checkbox for following text input">
-                                </div>
-                            </div>
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <input type="checkbox" aria-label="Checkbox for following text input">
-                                </div>
-                            </div>
-                            <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
+                <div id="SearchBar">
+                    <div class="input-group mb-3" style="margin: 2em">
+                        <div class="input-group-prepend">
+                            <input type="text" class="form-control" placeholder="T.ex. Volvo (C30)">
                         </div>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="checkbox" aria-label="Checkbox for following text input">
+                            </div>
+                        </div>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="checkbox" aria-label="Checkbox for following text input">
+                            </div>
+                        </div>
+                        <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
                     </div>
-                </form>*@
+                </div>
+            </form>*@
 
         </div>
 
@@ -141,8 +142,8 @@
         <div class="col">
 
             @{
-                
-            
+
+
 
                 var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
                 var articleResponse = newsApiClient.GetEverything(new EverythingRequest
