--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -2,46 +2,47 @@
 
 @{
     Layout = null;
-    
+
 }
 
 
-<!DOCTYPE html>
+<style>
+    body {
+        padding-top: 54px;
+    }
+         
+   
+</style>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Vehicles</title>
-</head>
-<body>
-    <p>This is the Vehicle Index page!</p>
+
+
+<p>This is the Vehicle Index page!</p>
+
+<div class="container">
 
     @foreach (var item in Model)
     {
 
-        if (item.Used)
-        {
-
-        
-
-         <div class="col-md-4">
-            <div class="thumbnail">
-            <img src="@item.Picture" data-holder-rendered="true" style="height: 150px; width: 50%; display: block;">
-            <div class="caption">
-                <h3 id="thumbnail-label">@item.Model</h3>
-                <p>@item.Price</p>
-                <p>@item.Brand</p>
-                <p>@item.Color</p>
-                <p>@item.Gearbox</p>
-                <p>@item.Used</p>
+        <div class="row">
+            <div class="col-md-7">
+                <a href ="/VehicleForSale">
+                    <img class="img-fluid rounded mb-3 mb-md-0"   src="http://placehold.it/700x300" alt="">
+                </a>
             </div>
-           </div>
-          </div>
+            <div class="col-md-5">
+                <h3>Project Two</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <a class="btn btn-primary" href="#">View Project</a>
+            </div>
+        </div>
 
-        }
+
 
     }
 
+</div>
 
-</body>
-</html>
+
+
+
+
