--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -57,7 +57,8 @@
         @foreach (var v in Model.Vehicles)
         {
             <div class="row">
-                <div class="col-4">
+                <input type="hidden" value="@v.Id" />
+                <div class="col-5">
                     @if (v.Picture != null)
                     {
                         <img src="https://via.placeholder.com/300x150" />
@@ -67,24 +68,24 @@
                         <img src="@v.Picture" />
                     }
                 </div>
-                <div class="col-5">
+                <div class="col-4">
                     <span>@v.Office</span>
                     <h3>@v.Brand @v.Model @v.ModelDescription @v.Year</h3>
                     <span>@v.Fuel | @v.Gearbox | @v.Kilometer</span>
                     <h4>@v.Price Kr</h4>
                 </div>
-                <div class="col-3">
+                <div class="col-3 float-sm-right">
                     <span>@v.UpdatedDate.ToString("dd/MM/yyyy hh:mm")</span>
                 </div>
             </div>
-            @*<h1>@v.Brand @v.Model @v.ModelDescription, @v.Year</h1>*@
         }
+    </div>
+    <div page-model="@Model.Pager" page-action="VehicleList">
+
     </div>
 </div>
 
 @*@Html.ActionLink("Load next 8 Vehicles", "Vehicles", "Controller", new { page = Model.Pager.CurrentPage + 1 })*@
 
-<div page-model="@Model.Pager" page-action="VehicleList">
 
-</div>
 
