Did some cleanup in the Bootstrap.

--- a/BolindersBil.Web/Views/Account/Admin.cshtml
+++ b/BolindersBil.Web/Views/Account/Admin.cshtml
@@ -7,7 +7,7 @@
 <h1 style="text-align:center; margin-top:20px; margin-bottom:100px">Welcome Admin!</h1>
 
 <div class="container">
-    <div class="alert-light">
+    <div class="">
         <input type="checkbox" id="checkAll" /> Check All
     </div>
     <div class="float-sm-right" style="margin-bottom:10px">
@@ -80,7 +80,7 @@
 <!-- LogOut-button: -->
 <div class="container" style="margin-bottom:10px">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             <div class="float-sm-right">
                 @if (User.Identity.IsAuthenticated)
                 {
