--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -2,23 +2,23 @@
 
 <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-sm-8">
             @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
             <form asp-controller="Vehicle" asp-action="Search" method="post">
-                <div class="col-lg-12">
+                <div class="col-sm-12">
                     <div class="row justify-content-center">
-                        <div class="col-12 col-md-10 col-lg-8">
+                        <div class="col-12 col-sm-10 col-sm-8">
                             <div class="card-body row no-gutters align-items-center">
                                 <div class="col-auto">
                                     <i class="fas fa-search h4 text-body"></i>
                                 </div>
                                 <!-- End of col -->
                                 <div class="col">
-                                    <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="T.ex. Volvo (C30)">
+                                    <input class="form-control form-control-sm form-control-borderless" type="search" placeholder="T.ex. Volvo (C30)">
                                 </div>
                                 <!-- End of col -->
                                 <div class="col-auto">
-                                    <button class="btn btn-lg btn-success float-lg-right" type="submit">Search</button>
+                                    <button class="btn btn-sm btn-success float-sm-right" type="submit">Search</button>
                                 </div>
                                 <!-- End of col -->
                             </div>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <!-- Buttons New/Used: -->
-                <div class="col-lg-12">
+                <div class="col-sm-12">
                     <div class="input-group-prepend justify-content-center">
                         <div class="input-group-text" style="margin:10px">
                             <input type="radio" name="Used">New Car<br>
@@ -36,26 +36,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
+                <div class="col-sm-12" style="margin-top:50px;">
+                    
+                    <!-- Skapa en tabell för loggor i databasen, gör en foreach och presentera loggorna här: -->
                     <div class="container justify-content-center">
                         <div class="row" style="">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkT">
                                     <img alt="AltText" src="~/Logo/Saab-logo-2013-2000x450.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Porsche-logo-2008-1920x1080.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img src="~/Logo/BMW-logo-2000-2048x2048.png" alt="AltText" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid">
                                 </a>
@@ -63,36 +64,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12" style="margin-top:50px;">
+                <div class="col-sm-12" style="margin-top:50px;">
                     <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
-                    <div class="container justify-content-center">
+                    @*<div class="container justify-content-center">
                         <div class="row" style="">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkT">
                                     <img alt="AltText" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Nissan-logo-2013-1440x900.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img src="~/Logo/Opel-logo-2009-1920x1080.png" alt="AltText" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="col-sm-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Volvo-logo-2014-1920x1080.png" class="img-fluid">
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </form>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             @{
                 var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
                 var articleResponse = newsApiClient.GetEverything(new EverythingRequest
