--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model BolindersBil.Models.VehiclesSearchViewModel
 
-<<<<<<< HEAD
 <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
         <div class="col-lg-8">
@@ -25,49 +24,9 @@
                             </div>
                         </div>
                     </div>
-=======
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-
-
-    <title>Home</title>
-</head>
-<body>
-
-    <style>
-
-        .img-fluid {
-            height: 100px;
-            width: 70%;
-        }
-    </style>
-
-
-    <p>In the Index View</p>
-    <div class="container-fluid">
-
-
-        @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
-        <form asp-controller="Vehicle" asp-action="Search" method="post">
-            <input name="searchString" class="col-md-3" placeholder="T.ex. Volvo (C30)" />
-            <button type="submit">Sök</button>
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <input type="radio" name="Used" value="false">New Car<br>
-                </div>
-                <div class="input-group-text">
-                    <input type="radio" name="Used" value="true">Used Car<br>
-                </div>
-            </div>
-        </form>
-
+                    </div>
 
         <div class="container">
-
             <div class="row" style="">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <a href="LinkT">
@@ -95,17 +54,6 @@
             </div>
         </div>
 
-
-        @*More logos*@
-        <div class="container">
-
-            <div class="row" style="">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkT">
-                        <img alt="AltText" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid">
-                    </a>
->>>>>>> 72c7c2fdf31adf2a912eacbf29007c91e930385b
-                </div>
                 <!-- Buttons New/Used: -->
                 <div class="col-lg-12">
                     <div class="input-group-prepend justify-content-center">
@@ -118,7 +66,8 @@
                     </div>
                 </div>
                 <div class="col-lg-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
+
+                    <!-- Skapa en tabell för loggor i databasen, gör en foreach och presentera loggorna här: -->
                     <div class="container justify-content-center">
                         <div class="row" style="">
                             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -145,7 +94,8 @@
                     </div>
                 </div>
                 <div class="col-lg-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
+
+                    <!-- Skapa en tabell för loggor i databasen, gör en foreach och presentera loggorna här: -->
                     <div class="container justify-content-center">
                         <div class="row" style="">
                             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -171,8 +121,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </form>
         </div>
+
         <div class="col-lg-4">
             @{
 
