--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -1,14 +1,5 @@
-@model BolindersBil.Models.VehiclesSearchViewModel
+﻿@model VehiclesSearchViewModel
 
-<div class="container-fluid" style="margin-top:100px;">
-    <div class="row">
-        <div class="col-sm-8">
-            @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
-            <form asp-controller="Vehicle" asp-action="Search" method="post">
-                <div class="col-sm-12">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-sm-10 col-sm-8">
-                        
 <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
         <div class="col-lg-8">
@@ -23,11 +14,6 @@
                                 </div>
                                 <!-- End of col -->
                                 <div class="col">
-                                    <input class="form-control form-control-sm form-control-borderless" type="search" placeholder="T.ex. Volvo (C30)">
-                                </div>
-                                <!-- End of col -->
-                                <div class="col-auto">
-                                    <button class="btn btn-sm btn-success float-sm-right" type="submit">Search</button>
                                     <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="T.ex. Volvo (C30)">
                                 </div>
                                 <!-- End of col -->
@@ -39,89 +25,7 @@
                         </div>
                     </div>
                 </div>
-                
-                <!-- Buttons New/Used: -->
-                <div class="col-sm-12">
-                
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-
-
-    <title>Home</title>
-</head>
-<body>
-
-    <style>
-
-        .img-fluid {
-            height: 100px;
-            width: 70%;
-        }
-    </style>
-
-
-    <p>In the Index View</p>
-    <div class="container-fluid">
-
-
-        @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
-        <form asp-controller="Vehicle" asp-action="Search" method="post">
-            <input name="searchString" class="col-md-3" placeholder="T.ex. Volvo (C30)" />
-            <button type="submit">Sök</button>
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <input type="radio" name="Used" value="false">New Car<br>
-                </div>
-                <div class="input-group-text">
-                    <input type="radio" name="Used" value="true">Used Car<br>
-                </div>
-            </div>
-        </form>
-
-
-        <div class="container">
-
-            <div class="row" style="">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkT">
-                        <img alt="AltText" src="~/Logo/Saab-logo-2013-2000x450.png" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkToImage">
-                        <img alt="AltText" src="~/Logo/Porsche-logo-2008-1920x1080.png" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkToImage">
-                        <img src="~/Logo/BMW-logo-2000-2048x2048.png" alt="AltText" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkToImage">
-                        <img alt="AltText" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid">
-                    </a>
-                </div>
-            </div>
-        </div>
-
-
-        @*More logos*@
-        <div class="container">
-
-            <div class="row" style="">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a href="LinkT">
-                        <img alt="AltText" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid">
-                    </a>
-                </div>
                 <!-- Buttons New/Used: -->
                 <div class="col-lg-12">
                     <div class="input-group-prepend justify-content-center">
@@ -133,15 +37,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-12" style="margin-top:100px;">
 
-                <div class="col-sm-12" style="margin-top:50px;">
-                    
                     <!-- Skapa en tabell för loggor i databasen, gör en foreach och presentera loggorna här: -->
-                    <div class="container justify-content-center">
-                        <div class="row" style="">
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
-                <div class="col-lg-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
                     <div class="container justify-content-center">
                         <div class="row" style="">
                             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -149,65 +47,22 @@
                                     <img alt="AltText" src="~/Logo/Saab-logo-2013-2000x450.png" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Porsche-logo-2008-1920x1080.png" class="img-fluid">
                                 </a>
-                            </div
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
+                            </div>
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img src="~/Logo/BMW-logo-2000-2048x2048.png" alt="AltText" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <a href="LinkToImage">
                                     <img alt="AltText" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid">
                                 </a>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-sm-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
-                    @*<div class="container justify-content-center">
-                        <div class="row" style="">
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
-                <div class="col-lg-12" style="margin-top:50px;">
-                    <!-- Skapa en tabelel för loggor i databasen, gör en foreach och presentera loggorna här: -->
-                    <div class="container justify-content-center">
-                        <div class="row" style="">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkT">
-                                    <img alt="AltText" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img alt="AltText" src="~/Logo/Nissan-logo-2013-1440x900.png" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img src="~/Logo/Opel-logo-2009-1920x1080.png" alt="AltText" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-sm-3 col-sm-6 col-xs-12">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img alt="AltText" src="~/Logo/Volvo-logo-2014-1920x1080.png" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                    </div>*@
-                </div>
-            </form>
-        </div>
-        <div class="col-sm-4">
                     </div>
                 </div>
             </form>
@@ -256,8 +111,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
