--- a/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
+++ b/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
@@ -59,18 +59,18 @@
 
 </style>
 
-
+@*<a asp-route="Vehicle" id="@v.Id"</a>*@
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-sm-block" src="https://picsum.photos/1000/400/?random" alt="First slide">
+            <img class="d-sm-block" src="@*v.image.Id*@" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-sm-block" src="https://picsum.photos/1000/400/?random" alt="Second slide">
+            <img class="d-sm-block" src="@*v.image.Id*@" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-sm-block" src="https://picsum.photos/1000/400/?random" alt="Third slide">
+            <img class="d-sm-block" src="@*v.image.Id*@" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -88,7 +88,8 @@
 
 <div>
     <h1 class="h3 subject_small">
-    Volvo V70 TDI With StarWars steering wheel Sports Edition -18 </h1>
+        @*v.make.model*@
+    </h1>
 </div>
 
 <div class="col-xs-4 text-right">
@@ -98,17 +99,9 @@
         <div>
 
             <div class="h3 nmb" style="white-space: nowrap">
-                322 800 kr
-
-            </div>
-
-            <div>
-                <span class="text-secondary"><s>198 500</s> kr</span>
-            </div>
-
-
-
-        </div>
+                
+                <a>@*v.price*@</a>
+            </div>        </div>
     </div>
 </div>
 
@@ -121,14 +114,14 @@
 
                         <dl class="col-xs-4">
                             <dt>Modellår</dt>
-                            <dd><strong>2014</strong></dd>
+                            <dd><strong>v.year</strong></dd>
                         </dl>
                         <dl class="col-xs-4">
                             <dt>Växellåda</dt>
                             <dd>
                                 <strong>
 
-                                    Automat
+                                    v.gear
 
                                 </strong>
                             </dd>
@@ -137,20 +130,16 @@
                             <dt>Miltal</dt>
                             <dd>
                                 <strong>
-                                    11 611
+                                    v.kilometer
                                 </strong>
                             </dd>
-                        </dl>
-                        <dl class="col-xs-4">
-                            <dt>Tillverkningsår</dt>
-                            <dd><strong>2013</strong></dd>
-                        </dl>
+                        </dl>                       
                         <dl class="col-xs-4">
                             <dt>Bränsle</dt>
                             <dd>
                                 <strong>
 
-                                    Diesel
+                                    v.fuel
 
                                 </strong>
                             </dd>
@@ -161,5 +150,7 @@
 
         </div>
     </div>
-
-
+    <
+    <div>
+        <input type="email" name="email" value="" placeholder="Ange Email Adress" />
+    </div>
