--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -9,11 +9,11 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a asp-action="Vehicles" class="nav-link">Vehicles</a>
+            <li>
+                <a class="nav-link" href="/Vehicle">Vehicles</a>
             </li>
-            <li class="nav-item">
-                <a asp-action="Contact" class="nav-link">Contact</a>
+            <li>
+                <a class="nav-link" href="/Contact">Contact</a>
             </li>
         </ul>   
     </div>
