--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model VehiclesSearchViewModel
 
+
+
 <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
         <div class="col-lg-8">
@@ -37,35 +39,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12" style="margin-top:100px;">
 
-                    <!-- Skapa en tabell för loggor i databasen, gör en foreach och presentera loggorna här: -->
-                    <div class="container justify-content-center">
-                        <div class="row" style="">
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkT">
-                                    <img alt="AltText" src="~/Logo/Saab-logo-2013-2000x450.png" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img alt="AltText" src="~/Logo/Porsche-logo-2008-1920x1080.png" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img src="~/Logo/BMW-logo-2000-2048x2048.png" alt="AltText" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-xs-12">
-                                <a href="LinkToImage">
-                                    <img alt="AltText" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </form>
+
+            <br />
+
+            <div class="text-center">
+                <img src="~/Logo/images.jpg" alt="Responsive image" class="col-xl-4" />
+                <div>
+                    <h5> Historian om BolindersBil</h5>
+                    <h6>
+                        Bilidersbil började på 1934 i sin morfars garage. Bolinder som pojken hette älskade Star Wars fast hans far sa att det är bara
+                        på hitt och att han skulle skaffa sig ett jobb. Jävla snorunge brukade han säga. Bolinder började mecka med stenar men upptäckte att det inte
+                        gick så bra att skruva på stenar. Vilken IDIOT!!!!!!
+                    </h6>
+                </div>
+            </div>
+
+
         </div>
         <div class="col-lg-4">
             @{
@@ -111,3 +102,108 @@
         </div>
     </div>
 </div>
+
+
+
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color lighten-3 pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+        <form asp-controller="Vehicle" asp-action="GetAllVehicles" method="get">
+            <!--Grid row-->
+            <div class="row">
+
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-12 mb-5">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/Saab-logo-2002-640x550.jpg" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-6 mb-4">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/Porsche-emblem-1994-640x550.jpg" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-6 mb-4">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/BMW-logo-2000-2048x2048.png" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-12 mb-4">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-6 mb-4">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-2 col-md-6 mb-4">
+
+                    <!--Image-->
+                    <div class="view overlay z-depth-1-half">
+                        <img id="img_omg" src="~/Logo/Mercedes-Benz-emblem-1926-640x550 (1).jpg" class="img-fluid" alt="Responsive image">
+                        <a href="">
+                            <div class="mask rgba-white-light"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+
+            </div>
+            <!--Grid row-->
+        </form>
+    </div>
+    <!-- Footer Elements -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
+        © 2018 Copyright:
+        <a href="https://localhost:44368/"> BolindersBil</a>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
