--- a/BolindersBil.Web/Views/Vehicle/Admin.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Admin.cshtml
@@ -12,6 +12,7 @@
     </div>
     <div class="float-sm-right" style="margin-bottom:10px">
         <a asp-controller="Vehicle" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
+        @*<a asp-controller="Vehicle" asp-action="EditVehicle" class="btn btn-warning">Edit</a>*@
         <button type="button" class="btn btn-warning" name="updateVehicle" id="updateVehicle">Update</button>
         <button type="button" class="btn btn-danger" name="deleteVehicle" id="deleteVehicle" data-toggle="modal" data-target="#deleteModal">Delete</button>
         <button type="button" class="btn btn-danger" name="bulkDeleteVehicle" id="bulkDeleteVehicle" data-toggle="modal" data-target="#bulkDeleteModal">Bulk Delete</button>
