--- a/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
@@ -122,10 +122,10 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
+            <label asp-for="Used" class="control-label col-sm-2"><strong>Sälj som begagnad?:</strong></label>
             <div class="col-sm-10">
-                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
+                <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" value="true"></label>
+                @*<label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>*@
             </div>
         </div>
 
